
package ddocker;

/**
 * Checkpoint used by ddocker to store the running state, should
 */
message Checkpoint {
  required string frameworkId = 1;
}

/**
 * Representation of a docker image
 */
message DockerImage {
  required DockerNamespace namespace = 1;
  required DockerRepository repository = 2;

  repeated string tag = 3;
}

message DockerNamespace {
  required string name = 1;
}

message DockerRepository {
  required string name = 1;
}

/**
 * Configuration for a docker registry
 */
message DockerRegistry {
  required string hostname = 1;
  required uint32 port = 2;
}
